apps/local/ingress-redirect-local.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: local-redirect-ingress
  namespace: local-services
  annotations:
    kubernetes.io/ingress.class: "nginx"
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/cluster-issuer: "letsencrypt"
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
    - hosts:
        - ha.tmem.de
      secretName: local-redirect-tls
  rules:
  - host: ha.tmem.de
    http:
      paths:
      - backend:
          serviceName: ha
          servicePort: 80
        path: /
